--- a/wp-content/mu-plugins/viget-wp/src/assets/css/admin.css
+++ b/wp-content/mu-plugins/viget-wp/src/assets/css/admin.css
@@ -1,3 +1,9 @@
+:root {
+    --vigetwp-color-primary: #1a4155;
+    --vigetwp-color-secondary: #265f7c;
+    --vigetwp-color-accent: #f26628;
+}
+
 #dashboard-widgets .viget-widget__header {
   font-weight: 700;
 }
@@ -16,5 +22,5 @@ body.options-discussion-php form table:first-of-type {
 	background-color: #122c3a;
 }
 .cm-s-oceanic-next .CodeMirror-gutters {
-	background-color: #1a4155;
+	background-color: var(--vigetwp-color-primary);
 }
