--- a/wp-content/themes/wp-starter/blocks/logo-grid/style.css
+++ b/wp-content/themes/wp-starter/blocks/logo-grid/style.css
@@ -1,30 +1,30 @@
-.acf-block-logo-grid {
-	.acf-block-inner__container {
-		@apply flex flex-wrap justify-center gap-24;
-	}
+@utility acf-block-logo-grid {
+  .acf-block-inner__container {
+    @apply flex flex-wrap justify-center gap-24;
+  }
 
-	.block-editor-block-list__layout {
-		@apply flex flex-wrap justify-center gap-24;
-	}
+  .block-editor-block-list__layout {
+    @apply flex flex-wrap justify-center gap-24;
+  }
 
-	& figure {
-		@apply flex;
-		@apply aspect-5/3;
-		@apply basis-1/2-gap lg:basis-1/4-gap;
+  & figure {
+    @apply flex;
+    @apply aspect-5/3;
+    @apply basis-1/2-gap lg:basis-1/4-gap;
 
-		> div {
-			@apply h-full!;
-		}
+    > div {
+      @apply !h-full;
+    }
 
-		& > img {
-			@apply block;
-			@apply h-full max-w-full;
-			@apply object-contain;
-		}
-	}
+    & > img {
+      @apply block;
+      @apply h-full max-w-full;
+      @apply object-contain;
+    }
+  }
 
-	/* Fix for image sizing in editor */
-	& .components-resizable-box__container {
-		@apply shrink!;
-	}
+  /* Fix for image sizing in editor */
+  & .components-resizable-box__container {
+    @apply !shrink;
+  }
 }
