--- a/wp-content/themes/wp-starter/blocks/text-icon-cards/style.css
+++ b/wp-content/themes/wp-starter/blocks/text-icon-cards/style.css
@@ -1,4 +1,4 @@
-.acf-block-text-icon-cards {
+@utility acf-block-text-icon-cards {
 	.acf-block-inner__container,
 	.acf-block-inner__container > .block-editor-block-list__layout {
 		@apply flex flex-wrap justify-start gap-x-24 gap-y-32;
