--- a/wp-content/themes/wp-starter/src/styles/core-blocks/list.css
+++ b/wp-content/themes/wp-starter/src/styles/core-blocks/list.css
@@ -1,5 +1,11 @@
-@layer components {
-	[data-type="core/list-item"] .block-editor-rich-text__editable.rich-text {
-		@apply inline-block;
-	}
+@utility block-editor-rich-text__editable {
+  [data-type='core/list-item'] &.rich-text {
+    @apply inline-block;
+  }
+}
+
+@utility rich-text {
+  [data-type='core/list-item'] &.block-editor-rich-text__editable {
+    @apply inline-block;
+  }
 }
