--- a/wp-content/themes/wp-starter/src/styles/layout/footer.css
+++ b/wp-content/themes/wp-starter/src/styles/layout/footer.css
@@ -1,5 +1,3 @@
-@layer components {
-	.wp-site-blocks > footer {
-
-	}
-}
+/* Uncomment to add styles to the footer
+@utility .wp-site-blocks > footer {
+}*/
