--- a/wp-content/themes/wp-starter/src/styles/layout/header.css
+++ b/wp-content/themes/wp-starter/src/styles/layout/header.css
@@ -1,5 +1,3 @@
-@layer components {
-	.wp-site-blocks > header {
-
-	}
-}
+/* Uncomment to add styles to the header
+@utility .wp-site-blocks > header {
+}*/
