--- a/wp-content/themes/wp-starter/blocks/text-icon-cards/style.css
+++ b/wp-content/themes/wp-starter/blocks/text-icon-cards/style.css
@@ -1,25 +1,23 @@
-@layer components {
-	.acf-block-text-icon-cards {
-		.acf-block-inner__container,
-		.acf-block-inner__container > .block-editor-block-list__layout {
-			@apply flex flex-wrap justify-start gap-x-24 gap-y-32 md:gap-y-80;
+@utility acf-block-text-icon-cards {
+	.acf-block-inner__container,
+	.acf-block-inner__container > .block-editor-block-list__layout {
+		@apply flex flex-wrap justify-start gap-x-24 gap-y-32;
+	}
+
+	.acf-block-text-icon-card,
+	.wp-block-acf-text-icon-card {
+		@apply sm:basis-1/2-gap lg:basis-1/3-gap flex flex-col gap-8;
+
+		&.aligncenter {
+			@apply text-center;
+
+			& figure img {
+				@apply mx-auto;
+			}
 		}
 
-		.acf-block-text-icon-card,
-		.wp-block-acf-text-icon-card {
-			@apply flex flex-col gap-8 sm:basis-1/2-gap lg:basis-1/3-gap;
-
-			&.aligncenter {
-				@apply text-center;
-
-				& figure img {
-					@apply mx-auto;
-				}
-			}
-
-			.wp-block-heading {
-				@apply text-lg font-bold;
-			}
+		.wp-block-heading {
+			@apply text-lg font-bold;
 		}
 	}
 }
