--- a/wp-content/themes/wp-starter/src/styles/tailwind.css
+++ b/wp-content/themes/wp-starter/src/styles/tailwind.css
@@ -1,21 +1,84 @@
 @import 'tailwindcss';
 
-@config '../../tailwind.config.js';
+@theme {
+	/* Colors */
+	--color-transparent: transparent;
+	--color-current: currentColor;
+	--color-white: #ffffff;
+	--color-black: #000000;
 
-/*
-  The default border color has changed to `currentcolor` in Tailwind CSS v4,
-  so we've added these compatibility styles to make sure everything still
-  looks the same as it did with Tailwind CSS v3.
+	/* Aspect Ratios */
+	--aspect-ratio-5/3: 5/3;
+	--aspect-ratio-5/4: 5/4;
 
-  If we ever want to remove these styles, we need to add an explicit border
-  color utility to any element that depends on these defaults.
-*/
+	/* Flex Basis */
+	--flex-basis-1/2-gap: calc((100% / 2) - var(--wp--style--block-gap));
+	--flex-basis-1/3-gap: calc((100% / 3) - var(--wp--style--block-gap));
+	--flex-basis-1/4-gap: calc((100% / 4) - var(--wp--style--block-gap));
+
+	/* Font Family */
+	--font-sans: var(--wp--preset--font-family--body);
+	--font-body: var(--wp--preset--font-family--body);
+	--font-heading: var(--wp--preset--font-family--heading);
+
+	/* Fluid Font Sizes */
+	--text-zero: 0;
+	--text-xs: clamp(0.625rem, 0.625rem + 0vw, 0.625rem);
+	--text-sm: clamp(0.75rem, 0.75rem + 0.3125vw, 0.875rem);
+	--text-base: clamp(1rem, 1rem + 0vw, 1rem);
+	--text-md: clamp(1.125rem, 1.125rem + 1.875vw, 1.5rem);
+	--text-lg: clamp(1.625rem, 1.625rem + 2.5vw, 2.25rem);
+	--text-xl: clamp(2.25rem, 2.25rem + 3.75vw, 3rem);
+	--text-2xl: clamp(2.625rem, 2.625rem + 4.5vw, 3.75rem);
+
+	/* Spacing */
+	--spacing-1: 1px;
+	--spacing-2: 2px;
+	--spacing-4: 4px;
+	--spacing-6: 6px;
+	--spacing-8: 8px;
+	--spacing-10: 10px;
+	--spacing-12: 12px;
+	--spacing-16: 16px;
+	--spacing-20: 20px;
+	--spacing-24: 24px;
+	--spacing-28: 28px;
+	--spacing-32: 32px;
+	--spacing-36: 36px;
+	--spacing-40: 40px;
+	--spacing-44: 44px;
+	--spacing-48: 48px;
+	--spacing-52: 52px;
+	--spacing-56: 56px;
+	--spacing-60: 60px;
+	--spacing-64: 64px;
+	--spacing-80: 80px;
+	--spacing-96: 96px;
+	--spacing-112: 112px;
+	--spacing-128: 128px;
+
+	/* Fluid Spacing */
+	--spacing-fluid-xs: clamp(0.125rem, 0.125rem + 0.3125vw, 1rem);
+	--spacing-fluid-sm: clamp(1.25rem, 1.25rem + 0.5vw, 2.5rem);
+	--spacing-fluid-md: clamp(2rem, 2rem + 1vw, 4rem);
+	--spacing-fluid-lg: clamp(3.5rem, 3.5rem + 1.75vw, 7rem);
+	--spacing-fluid-xl: clamp(6rem, 6rem + 2.5vw, 10rem);
+	--spacing-fluid-2xl: clamp(9rem, 9rem + 3.75vw, 15rem);
+
+	/* Screens */
+	--screen-container: 1200px;
+	--screen-content-small: 900px;
+	--screen-wp-cols: 781px;
+	--screen-mobile-menu: 600px;
+	--screen-xs: 480px;
+}
+
 @layer base {
-  *,
-  ::after,
-  ::before,
-  ::backdrop,
-  ::file-selector-button {
-    border-color: var(--color-gray-200, currentcolor);
-  }
+	*,
+	::after,
+	::before,
+	::backdrop,
+	::file-selector-button {
+		border-color: var(--color-gray-200, currentcolor);
+	}
 }
